; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/sio/extr_sio.c_siocnset.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/sio/extr_sio.c_siocnset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.consdev = type { i32, i32 }

@.str = private unnamed_addr constant [7 x i8] c"ttyd%d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.consdev*, i32)* @siocnset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @siocnset(%struct.consdev* %0, i32 %1) #0 {
  %3 = alloca %struct.consdev*, align 8
  %4 = alloca i32, align 4
  store %struct.consdev* %0, %struct.consdev** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.consdev*, %struct.consdev** %3, align 8
  %7 = getelementptr inbounds %struct.consdev, %struct.consdev* %6, i32 0, i32 0
  store i32 %5, i32* %7, align 4
  %8 = load %struct.consdev*, %struct.consdev** %3, align 8
  %9 = getelementptr inbounds %struct.consdev, %struct.consdev* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @sprintf(i32 %10, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 %11)
  ret void
}

declare dso_local i32 @sprintf(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
